[project]
name = "flask-openapi-validator"
version = "0.1.0"
description = "A validation package for Flask requests"
authors = [
    { name = "Ng Jun Siang", email = "ngjunsiang@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.0",
    "openapi-spec-validator==0.7.1"
]
keywords = ["flask", "openapi", "openapi-spec-validator"]
license = "Apache-2.0"
readme = "README.md"

[project.urls]
repository = "https://github.com/nyjc-computing/flask-openapi-validator"
